# localhost

./: Cargo.toml  README.md
.github/workflows/: rust.yml
config/: config.json
src/: cgi.rs  config.rs  file_ops.rs  fs_safety.rs  json.rs  log.rs  main.rs  router.rs  static_files.rs
src/http/: mod.rs  request.rs  response.rs
www/cgi-bin/: hello.sh
www/site1/: about.html  index.html
www/site2/: contact.html
www/site3/: index.html
