[package]
name = "localhost"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
colored = "2.0.4"
config = { version = "0.13.4", features = [] }
libc = { version = "0.2.150", features = [] }
